<resources>
    <string name="app_name">PlatziGram</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <!-- Interfaz Login  -->
    <string name="editUserName">Nombre de Usuario</string>
    <string name="editPassword">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="txtNoCuenta">¿No tienes cuenta?, </string>
    <string name="txtCrearCuenta">Crea una aquí</string>
    <!-- Interfaz Crear Cuenta -->
    <string name="editCorreo">Correo</string>
    <string name="editNombre">Nombre</string>
    <string name="editUsuario">Usuario</string>
    <string name="editContraseña">Contraseña</string>
    <string name="editRepetirContraseña">Confirmar Contraseña</string>
    <string name="btnUnirme">Unirme</string>
    <string name="txtToolBar">Crear Cuenta</string>
    <!-- Interfaz CardView -->
    <string name="txtNombreCardView">Pedro Picapiedra</string>
    <string name="txtHaceCardView">Hace</string>
    <string name="txtTiempoCardView">4 días</string>
    <string name="txtCantidadLikeCardView">10 Me Gusta</string>
    <!-- Interfaz BottomBar -->
    <string name="txt_tab_buscar">Buscar</string>
    <string name="txt_tab_inicio">Inicio</string>
    <string name="txt_tab_yo">Yo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtCantidadLikeNumberDetail">10</string>
    <string name="secondWordDetail">Me Gusta</string>
    <string name="titleImageDetail">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum, metus a tincidunt scelerisque, leo nisl egestas neque, quis ornare nunc felis at erat. Ut pellentesque eget nunc non blandit. Aliquam efficitur pulvinar ipsum id pulvinar. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed eget felis eu ipsum finibus venenatis eget aliquet est. Cras pellentesque efficitur libero, at sodales arcu condimentum sed. Integer tristique ante nec sapien bibendum, id semper nisl posuere. In ac quam gravida, pretium diam at, euismod dolor. Morbi in cursus arcu, a sodales magna.</string>
</resources>
