<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_height="@dimen/tamañoCardView"
    android:layout_width="match_parent"
    cardview:cardCornerRadius="@dimen/radioEsquinaCardView"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <!-- FrameLayout para colocar elementos encima de otros -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgCardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamañoCardView"
            android:background="@drawable/image"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/backgroundLinear">

            <TextView
                android:id="@+id/txtNombreCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNombreCardView"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txtNombrecardView"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtHaceCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtHaceCardView"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txtHaceCardView"/>

                <TextView
                    android:id="@+id/txtTiempoCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTiempoCardView"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txtHaceCardView"
                    android:layout_marginLeft="@dimen/txtTiempo"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/likeMargin">

                <CheckBox
                    android:id="@+id/likeCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_like"/>

                <TextView
                    android:id="@+id/txtCantidadLikeCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCantidadLikeCardView"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txtHaceCardView"
                    android:layout_marginLeft="@dimen/txtTiempo"/>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>